=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Fixed: [ 2159394 ] Download Config fails 
 - Fixed: Error in User admin -> Cleanup users when users not approved by admin exist (canajun2eh)
 - Fixed: URL media not displaying/editing properly on Media Tab (windmillway)
 - Added: "Create missing thumbnails" option on Manage Media page (canajun2eh)
 - Fixed: Improve usability of Manage Media page when working within a directory (canajun2eh)
 - Fixed: [ 2186659 ] SVN 4113: Setup wizard, index dir field in wrong group (canajun2eh)
 - Added: Prevention of "css file not found" Apache Log errors if Lightbox module not installed. (windmillway)
 - Fix: [ 2180725 ] 4107 Notes Tab (fisharebest)
 - Added: [ 1810145 ] Simple Sources
 - Added: Enabled re-intialisation of Lightbox (if installed) on any tab on Indi page (windmillway)
 - Fixed: Illegible text on Googlemap GInfoWindowTabs with Themes simplyxxx. (windmillway)
 - Changed: Small change to "return button" link on admin page Lightbox configuration (windmillway)
 - Added: [ 2145398 ] [ 2148349 ] Admin Config Page Link to Lightbox configuration (windmillway)
 - Fixed: [ 1985973 ] ASSO tag GUI doesn't work (fisharebest)
 - Fixed: [ 1876508 ] gender icon distorted (fisharebest)
 - Fixed: [ 2145398 ] Incorrect call to lb_config.php in mediaviewer.php (ref line below). (windmillway)
 - Fixed: [ 2145398 ] [ 2148349 ] Incorrect call to lb_config.php if it does not exist. (windmillway)
 - Fixed: [ 2046123 ] 4.1.5 ... link to gedrecord.php (fisharebest)
 - Fixed: [ 2044219 ] Editing records - Case sensitivity of PID (fisharebest)
 - Fixed: [ 2131257 ] 4.1.5rel places list misreads gedcom notes (fisharebest)
 - Fixed: [ 2025978 ] Changes Report (SVN 3591) (fisharebest)